# meshproc

./: CMakeLists.txt  README.md  aabb.h  bvh.h  distance_point_to_plane.h  dynamic_array_meta.h  dynamic_array_uint32_pair.h  dynamic_array_vec3.h  edge_aabb_intersection.h  edge_bvh_intersection.h  edge_triangle_intersection.h  macros.h  mapping.h  mesh_io.h  ray_aabb_intersection.h  ray_bvh_intersection.h  render_mesh.c  self_intersection.c  suzanne.stl  timer.h  triangle.h  triangle_aabb_intersection.h  triangle_triangle_intersection.h  triangulation.h  two_cubes.stl  two_tris.stl  untitled.blend  untitled.blend1  vec3.h
triangle/: CMakeLists.txt
